Updated geographical mapping notebooks

--- a/geographical_mapping_taxis.ipynb
+++ b/geographical_mapping_taxis.ipynb
@@ -2484,301 +2484,101 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Use the most used station for bikes as centre\n",
+    "# The station with the most number of rides is ID 519: Pershing Square North\n",
+    "# 40.751873\n",
+    "# -73.977706"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math  \n",
+    "def calculateDistancefromCentral(x1,y1,x2=40.780184,y2=-73.977285):  \n",
+    "    dist = math.sqrt((x2 - x1)**2 + (y2 - y1)**2)  \n",
+    "    return dist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jf631\\.conda\\envs\\datascience\\lib\\site-packages\\ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    }
+   ],
+   "source": [
+    "taxis_sample_years_average_filter['distancefromCentre'] = taxis_sample_years_average_filter.apply(lambda x: calculateDistancefromCentral(x['pickup_latitude'], x['pickup_longitude']), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>passenger_count</th>\n",
-       "      <th>trip_distance</th>\n",
-       "      <th>pickup_longitude</th>\n",
-       "      <th>pickup_latitude</th>\n",
-       "      <th>dropoff_longitude</th>\n",
-       "      <th>dropoff_latitude</th>\n",
-       "      <th>pickup_location_id</th>\n",
-       "      <th>dropoff_location_id</th>\n",
-       "      <th>total_amount</th>\n",
-       "      <th>trip_type</th>\n",
-       "      <th>year2</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>year</th>\n",
-       "      <th>pickup_longitude2</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>2013</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2013.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2014</td>\n",
-       "      <td>-73.951057</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>-73.951057</td>\n",
-       "      <td>40.724365</td>\n",
-       "      <td>-73.954201</td>\n",
-       "      <td>40.730099</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4.50</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2014.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2015</td>\n",
-       "      <td>-73.978348</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>-73.978348</td>\n",
-       "      <td>40.693478</td>\n",
-       "      <td>-73.970367</td>\n",
-       "      <td>40.693211</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5.75</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2015.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2016</td>\n",
-       "      <td>-73.956116</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>-73.956116</td>\n",
-       "      <td>40.682999</td>\n",
-       "      <td>-73.956116</td>\n",
-       "      <td>40.682976</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>18.00</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2016.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2015</td>\n",
-       "      <td>-73.919464</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>-73.919464</td>\n",
-       "      <td>40.743122</td>\n",
-       "      <td>-73.917343</td>\n",
-       "      <td>40.742973</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-3.30</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2015.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td rowspan=\"2\" valign=\"top\">2016</td>\n",
-       "      <td>-73.955750</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>31.840355</td>\n",
-       "      <td>-73.955750</td>\n",
-       "      <td>40.803856</td>\n",
-       "      <td>-73.872269</td>\n",
-       "      <td>40.774246</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>35.80</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2016.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>-73.807236</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>31.973392</td>\n",
-       "      <td>-73.807236</td>\n",
-       "      <td>40.700218</td>\n",
-       "      <td>-73.918083</td>\n",
-       "      <td>40.743305</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>37.30</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2016.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td rowspan=\"2\" valign=\"top\">2015</td>\n",
-       "      <td>-73.978775</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>33.126386</td>\n",
-       "      <td>-73.978775</td>\n",
-       "      <td>40.683968</td>\n",
-       "      <td>-73.967583</td>\n",
-       "      <td>40.587246</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>29.16</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2015.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>-73.924034</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>33.791574</td>\n",
-       "      <td>-73.924034</td>\n",
-       "      <td>40.827267</td>\n",
-       "      <td>-73.859978</td>\n",
-       "      <td>40.867458</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>28.80</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2015.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2016</td>\n",
-       "      <td>-73.909630</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>34.368071</td>\n",
-       "      <td>-73.909630</td>\n",
-       "      <td>40.874546</td>\n",
-       "      <td>-73.972229</td>\n",
-       "      <td>40.795033</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>28.56</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2016.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>917 rows × 11 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                        passenger_count  trip_distance  pickup_longitude  \\\n",
-       "year pickup_longitude2                                                     \n",
-       "2013  0.000000                      1.0       0.000000          0.000000   \n",
-       "2014 -73.951057                     1.0       0.000000        -73.951057   \n",
-       "2015 -73.978348                     1.0       0.000000        -73.978348   \n",
-       "2016 -73.956116                     1.0       0.000000        -73.956116   \n",
-       "2015 -73.919464                     1.0       0.000000        -73.919464   \n",
-       "...                                 ...            ...               ...   \n",
-       "2016 -73.955750                     2.0      31.840355        -73.955750   \n",
-       "     -73.807236                     1.0      31.973392        -73.807236   \n",
-       "2015 -73.978775                     1.0      33.126386        -73.978775   \n",
-       "     -73.924034                     1.0      33.791574        -73.924034   \n",
-       "2016 -73.909630                     1.0      34.368071        -73.909630   \n",
-       "\n",
-       "                        pickup_latitude  dropoff_longitude  dropoff_latitude  \\\n",
-       "year pickup_longitude2                                                         \n",
-       "2013  0.000000                 0.000000           0.000000          0.000000   \n",
-       "2014 -73.951057               40.724365         -73.954201         40.730099   \n",
-       "2015 -73.978348               40.693478         -73.970367         40.693211   \n",
-       "2016 -73.956116               40.682999         -73.956116         40.682976   \n",
-       "2015 -73.919464               40.743122         -73.917343         40.742973   \n",
-       "...                                 ...                ...               ...   \n",
-       "2016 -73.955750               40.803856         -73.872269         40.774246   \n",
-       "     -73.807236               40.700218         -73.918083         40.743305   \n",
-       "2015 -73.978775               40.683968         -73.967583         40.587246   \n",
-       "     -73.924034               40.827267         -73.859978         40.867458   \n",
-       "2016 -73.909630               40.874546         -73.972229         40.795033   \n",
-       "\n",
-       "                        pickup_location_id  dropoff_location_id  total_amount  \\\n",
-       "year pickup_longitude2                                                          \n",
-       "2013  0.000000                         NaN                  NaN          2.00   \n",
-       "2014 -73.951057                        NaN                  NaN          4.50   \n",
-       "2015 -73.978348                        NaN                  NaN          5.75   \n",
-       "2016 -73.956116                        NaN                  NaN         18.00   \n",
-       "2015 -73.919464                        NaN                  NaN         -3.30   \n",
-       "...                                    ...                  ...           ...   \n",
-       "2016 -73.955750                        NaN                  NaN         35.80   \n",
-       "     -73.807236                        NaN                  NaN         37.30   \n",
-       "2015 -73.978775                        NaN                  NaN         29.16   \n",
-       "     -73.924034                        NaN                  NaN         28.80   \n",
-       "2016 -73.909630                        NaN                  NaN         28.56   \n",
-       "\n",
-       "                        trip_type   year2  \n",
-       "year pickup_longitude2                     \n",
-       "2013  0.000000                1.0  2013.0  \n",
-       "2014 -73.951057               NaN  2014.0  \n",
-       "2015 -73.978348               1.0  2015.0  \n",
-       "2016 -73.956116               2.0  2016.0  \n",
-       "2015 -73.919464               1.0  2015.0  \n",
-       "...                           ...     ...  \n",
-       "2016 -73.955750               1.0  2016.0  \n",
-       "     -73.807236               1.0  2016.0  \n",
-       "2015 -73.978775               1.0  2015.0  \n",
-       "     -73.924034               1.0  2015.0  \n",
-       "2016 -73.909630               1.0  2016.0  \n",
-       "\n",
-       "[917 rows x 11 columns]"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x10682950470>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Find central station (with most tripdurations)\n",
-    "taxis_sample_years_average_filter.sort_values('trip_distance')"
+    "sns.boxplot(y='distancefromCentre', x='year2', data=taxis_sample_years_average_filter,palette=\"GnBu_d\",)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
